# Search-Engines

./: .gitignore  CMakeLists.txt  README.md  benchmark_multipliers.py  filter_seedlist.py  plot_crawl.py  rank_seedlist.cpp  setup.sh  test_wikipedia.py
.githooks/: pre-commit
.github/workflows/: ci.yml
homeworks/homework_1/: BestSubsequence  BestSubsequence.cpp  Makefile  MostPositiveSubsequence.cpp  MostPositiveSubsequence.h
homeworks/homework_10/: LinuxTinyServer.cpp  Plugin.h
homeworks/homework_11/: BloomFilter.h  CMakeLists.txt  Makefile  bf  bloomfilter_test.cpp  main.cpp  test
homeworks/homework_12/: ExpectedResults.txt  Makefile  Queries.txt  Robots.cpp  RobotsTxt.cpp  RobotsTxt.h  SampleRobots.txt  Utf8.h  pause.cpp  robots
homeworks/homework_13/: Makefile  driver  driver.cpp  expression.cpp  expression.h  parser.cpp  parser.h  tokenstream.cpp  tokenstream.h
homeworks/homework_13/driver.dSYM/Contents/Resources/DWARF/: driver
homeworks/homework_13/driver.dSYM/Contents/Resources/Relocations/aarch64/: driver.yml
homeworks/homework_2/: CMakeLists.txt  string.cpp  string.h  string_test.cpp  test.cpp  vector.cpp  vector.h  vector_test.cpp
homeworks/homework_3/: KuhnStresstest.my.Utf16.txt  KuhnStresstest.twice.Utf8.txt  Makefile  Utf8.cpp  flip  flip.cpp  popEmojis.txt
homeworks/homework_3/Testcases/: GettysburgAddress.Utf16.txt  GettysburgAddress.Utf16BE.txt  GettysburgAddress.Utf8BOM.txt  KuhnStressTest.CleanUtf8.txt  KuhnStressTest.Utf16BE.txt  PopularEmojis.Utf16.txt  PopularEmojis.Utf16BE.txt  VariousLanguages.Utf16.txt  VariousLanguages.Utf16BE.txt  VariousLanguages.txt
homeworks/homework_5/: Common.cpp  Common.h  HashBlob.h  HashFile.cpp  HashTable.cpp  HashTable.h  Timer.h  Top10.cpp  TopN.cpp  TopN.h  testHashTable.cpp
homeworks/homework_5/HashTableStarter/: Makefile
homeworks/homework_5/HashTableStarter/Testcases/: Makefile  WordCounts.correct.txt
homeworks/homework_5/Testcases/: Hamlet.Top10.correct.txt  HashTable.correct.txt  Top10words.txt  UniqueWords.txt
homeworks/homework_6/: Common.cpp  Common.h  HashBlob.h  HashFile.cpp  HashTable.h  Makefile  Top10.cpp  TopN.cpp
homeworks/homework_6/Testcases/: Top100words.txt
homeworks/homework_7/: Makefile  Traverse  Traverse.cpp  TraverseTextHtmlDocuments.testout.txt  TraverseUsage.testout.txt  WordCount  WordCount.cpp  WordCountDebug
homeworks/homework_7/Documents/Html/: NYTimes.html
homeworks/homework_7/Documents/Tests/: Shakespeare.correct.txt  TraverseDocuments.correct.txt  TraverseTextHtmlDocuments.correct.txt  WordCountUsage.correct.txt
homeworks/homework_7/Documents/Text/Shakespeare/: Macbeth.txt
homeworks/homework_9/: LinuxGetSsl.cpp  LinuxGetUrl.cpp  Makefile
query/: Makefile
scripts/: dedupe_seedlist.py
src/: .gitkeep  CMakeLists.txt  anchor_index_builder.cpp  main.cpp  main_distributed.cpp  sync_meta.cpp
src/crawler/: Crawler.cpp  Crawler.h  DelayedQueue.cpp  DelayedQueue.h  FrontierItem.cpp  FrontierItem.h  FrontierItemHelper.cpp  FrontierItemHelper.h  Makefile  RobotsCache.cpp  RobotsCache.h  RobotsTxt.cpp  RobotsTxt.h  UrlFilter.cpp  UrlFilter.h  basic  basic.cpp  blackList.txt  checkpoint.cpp  checkpoint.h  failures.txt  frontier.cpp  frontier.h  output.txt  ranker.h  seedList.txt  seedList_small.txt  testing.html  url_dedup.cpp  url_dedup.h  url_dedup_test.cpp
src/index/: Makefile  README.md  binary_writer.h  buffer_reader.h  chunk_flusher.cpp  chunk_flusher.h  disk_chunk_reader.cpp  disk_chunk_reader.h  disk_chunk_writer.cpp  disk_chunk_writer.h  in_memory_index.cpp  in_memory_index.h  isr.cpp  isr.h  main.cpp  test_query_tokenizer  tokenizer.cpp  tokenizer.h  types.h  vbyte.cpp  vbyte.h
src/index/src/: indexer_main.cpp  main.cpp  master_main.cpp
src/index/src/lib/: Common.cpp  Common.h  HashBlob.h  HashTable.h  binary_writer.h  buffer_reader.h  chunk_flusher.cpp  chunk_flusher.h  content_features.cpp  content_features.h  disk_chunk_reader.cpp  disk_chunk_reader.h  disk_chunk_writer.cpp  disk_chunk_writer.h  document_features.cpp  document_features.h  dynamic_rank.cpp  dynamic_rank.h  html_parser.cpp  html_parser.h  in_memory_index.cpp  in_memory_index.h  indexQueue.cpp  indexQueue.h  isr.cpp  isr.h  isr_and.cpp  isr_and.h  isr_container.cpp  isr_container.h  isr_or.cpp  isr_or.h  isr_phrase.cpp  isr_phrase.h  query_compiler.cpp  query_compiler.h  query_engine.cpp  query_engine.h  query_profile.cpp  query_profile.h  (+15 more)
src/index/tests/: test_chunk_flusher.cpp  test_chunk_reader.cpp  test_chunk_writer.cpp  test_integration.cpp  test_query_isrs.cpp  test_query_tokenizer.cpp  test_stemmer.cpp  test_tokenizer.cpp  test_vbyte.cpp
src/ipc/: unix_socket.cpp  unix_socket.h  wire_document.cpp  wire_document.h
src/parser/: Broken.html  Broken.parsed.html  HtmlParser.cpp  HtmlParser.h  HtmlTags.cpp  HtmlTags.h  Makefile  NYTimes.parsed.html  ParsePage.cpp  RandomPages.html  RandomPages.parsed.html
src/query/: .gitignore  Makefile  Plugin.h  README.md  SearchCommon.h  SearchPlugin.cpp  broker_server  broker_server.cpp  create_dummy_index.cpp  dummy_index  worker_node  worker_node.cpp
src/query/website/: index.html  style.css
src/tools/: socket_stream_test.cpp
src/utils/: CMakeLists.txt  HashTable.h  LinuxGetSsl.cpp  PriorityQueue.hpp  Utf8.h  deque.hpp  string.h  string.hpp  vector.h  vector.hpp
src/utils/SSL/: LinuxSSL_Crawler.cpp  LinuxSSL_Crawler.hpp
src/utils/STL_rewrite/: array.hpp  deque.hpp  pair.hpp  string_view.hpp
src/utils/hash/: HashBlob.cpp  HashBlob.h  HashTable.h
src/utils/threads/: condition_variable.hpp  lock_guard.hpp  mutex.hpp
test/: CMakeLists.txt
test/crawler/: FrontierItemHelper_test.cpp  FrontierItem_test.cpp  frontier_test.cpp  url_dedup_test.cpp
test/index/: content_features_test.cpp  document_features_test.cpp  query_engine_test.cpp  static_ranker_test.cpp  url_features_test.cpp
test/utils/: PriorityQueue_test.cpp  deque_test.cpp  string_test.cpp  vector_test.cpp
